# thai-pii-redaction

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  ai_guard.py  build_exe.ps1  demo_cli.py  docker-compose.yml  launcher.py  package-lock.json  package.json  pyproject.toml  requirements-build.txt  requirements-ml.txt  requirements-ocr.txt  requirements-web.txt  requirements.txt  run.ps1  run.sh  vitest.config.js
.claude/: launch.json
.codex/agents/: aiguard-docs-auditor.toml  aiguard-explorer.toml  aiguard-reviewer.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  smoke-crossplatform.yml
app/: server.py
app/static/: app.js  index.html  style.css
app/worker/: __main__.py  handler.py  runner.py  transport.py
benchmark/: __init__.py  __main__.py  corpus.py  gold.py  runner.py  scorer.py  strategies.py  sweep_web_guard.py  types.py
demo/: playground.html
demo/tests/: playground.test.js
desktop/: .gitignore  README.md  build-sidecar.ps1  package-lock.json  package.json
desktop/src/: api.js  app.js  index.html  screen-audit.js  screen-redact.js  screen-report.js  screen-settings.js  screen-text.js  styles.css  theme.js  tokens.css  ui.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tests/: api-report.test.js  screen-redact.test.js  screen-report.download.test.js  screen-report.xss.test.js  screen-settings.test.js
docs/: README.md  architecture.md  install-from-source.md  project-status.md  release-process.md  versioning-proposal.md
docs/acceptance/: 2026-07-22-live-run.md  2026-07-23-office-local-run.md  2026-07-23-storefront-release-run.md  2026-07-24-office-2.5.0-run.md  2026-07-24-storefront-candidate-run.md  README.md
docs/decisions/: 2026-07-07-ui-redesign-aiguard-design.md  2026-07-10-post-competition-longterm-roadmap.md  2026-07-13-thai-pii-recall-benchmark-design.md  2026-07-15-ner-engine-strategy-decision.md  2026-07-17-roadmap-v2-design.md  2026-07-19-audit-v2-findings.md  2026-07-20-session-handoff.md  2026-07-22-platform-integration-contract.md  README.md
docs/demo/: booth-checklist.md
docs/platform/: ai-for-thai.md
docs/store/: listing.md  permissions-justification.md  privacy-policy.md
docs/submission/: README.md  a4-onepager.md  a4.html  build_designed_docs.py  form-answers.md  poster-a1.md  poster.html  video-script.md
examples/: make_sample_pdf.py
examples/prompts/: 01_sick_leave_email.txt  02_medical_consult.txt  03_bank_complaint.txt
extension/: README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js  sidepanel.css  sidepanel.html  sidepanel.js  sites.js  tokens.css
extension/tests/: background.session.test.js  content.mask.test.js  content.restore.test.js  sidepanel.session.test.js  (+2 more)
office-addin/: README.md  manifest.dev.excel.xml  manifest.dev.powerpoint.xml  manifest.dev.xml  manifest.json  package-lock.json  package.json  taskpane.html  tsconfig.json  vite.config.ts  vitest.config.ts
packaging/: README.md
pii_redactor/: __init__.py  ai_client.py  audit.py  exporter.py  leak_guard.py  models.py  output_validator.py  pdf_render.py  pipeline.py  redactor.py  reid_risk.py  report.py  report_pdf.py  reverse_mapper.py  sensitive_detector.py  session_service.py  session_vault.py  stateless.py
scripts/: _version_targets.py  build_sidecar.py  bump_version.py  check_release_assets.py  check_release_readiness.py  check_version.py  demo_check.ps1  lock_deps.py  measure_demo.py  package_extension.py  prewarm_ner.py  run_acceptance.py  smoke_exe.py  smoke_sidecar.py  update_packaging.py
tests/: sample_thai.txt  test_acceptance_runner.py  test_api_demo.py  test_api_hardening.py  test_api_token.py  test_benchmark.py  test_benchmark_gold.py  test_benchmark_strategies.py  test_build_sidecar_model_pin.py  test_codex_project_setup.py  test_desktop_capabilities.py  test_desktop_updater_config.py  test_e2e_examples.py  test_extension_locales.py  test_injection_guard.py  test_leak_guard.py  test_lock_coverage.py  test_models.py  test_name_context.py  test_ner_engine.py  test_ocr.py  test_platform_api_contract.py  test_prewarm_ner.py  test_recall_leaks.py  test_release_assets.py  test_release_readiness.py  test_report_pdf.py  test_scorer_coverage.py  test_session_service.py  test_setup.py  test_smoke_sidecar.py  test_stateless.py  test_stateless_leak_regression.py  test_step10_cli.py  test_step11_api.py  test_step12_redact_pdf.py  test_step12_report.py  test_step13_sensitive.py  test_step1_ingest.py  test_step2_detection.py  (+15 more)
(+103 files in other folders)
